--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <h1>TechNotes</h1>
+    <div>
+        <span>T</span> <span>e</span> <span>c</span> <span>h</span> <span>N</span>  <span>o</span>  <span>t</span>   <span>e</span>   <span>s</span>
+    </div>
 </body>
 </html>
